@@ -2811,6 +2811,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.08.7:
 
+-Pie chart included in portfolio balance stats
+
 -Misc. optimizations for faster interface / cron runtimes
 
 -Bug fix / optimization for coingecko API slowing down interface runtime significantly
